# c2rp

./: .gitignore  Cargo.toml  LICENSE
bridge/: Cargo.toml
bridge/src/: lib.rs
bridge/src/mesh/: face.rs  mod.rs
route-painter/: Cargo.toml
sec-loader/: Cargo.toml
sec-loader/src/: lib.rs
sec-loader/src/err/: mod.rs
sec-loader/src/sec/: mod.rs
sec-loader/src/sec/body/: mod.rs
sec-loader/src/sec/body/field_a/: mod.rs
sec-loader/src/sec/body/field_b/: mod.rs
sec-loader/src/sec/body/field_c/: mod.rs
sec-loader/src/sec/body/plumb_lines/: mod.rs
sec-loader/src/sec/body/polygons/: mod.rs
sec-loader/src/sec/body/sides/: mod.rs
sec-loader/src/sec/header/: mod.rs
sec-loader/src/sec/header/basic_info/: mod.rs
sec-loader/src/sec/header/identifying/: mod.rs  token.rs  version.rs
sec-loader/src/sec/tail/: mod.rs
sec-loader/src/sec/tail/basic_info/: mod.rs
sec-loader/src/sec/tail/mesh/: mod.rs
sec-loader/src/utils/: mod.rs
